structures-sql/src/main/antlr/.antlr/StructuresSQLParser.java
// Generated from /Users/navidmitchell/workspace/git/structures/structures-sql/src/main/antlr/StructuresSQL.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class StructuresSQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CREATE=1, TABLE=2, COMPONENT=3, INDEX=4, TEMPLATE=5, FOR=6, USING=7, ALTER=8, 
		ADD=9, COLUMN=10, REINDEX=11, INTO=12, WITH=13, CONFLICTS=14, ABORT=15, 
		PROCEED=16, MAX_DOCS=17, SLICES=18, AUTO=19, SIZE=20, SOURCE_FIELDS=21, 
		QUERY=22, SCRIPT=23, NUMBER_OF_SHARDS=24, NUMBER_OF_REPLICAS=25, UPDATE=26, 
		DELETE=27, FROM=28, SET=29, WHERE=30, AND=31, OR=32, TEXT=33, KEYWORD=34, 
		INTEGER=35, BOOLEAN=36, DATE=37, LPAREN=38, RPAREN=39, COMMA=40, SEMICOLON=41, 
		EQUALS=42, NOT_EQUALS=43, LESS_THAN=44, GREATER_THAN=45, LESS_THAN_EQUALS=46, 
		GREATER_THAN_EQUALS=47, PLUS=48, MINUS=49, MULTIPLY=50, DIVIDE=51, PARAMETER=52, 
		STRING=53, ID=54, INTEGER_LITERAL=55, BOOLEAN_LITERAL=56, COMMENT=57, 
		WS=58, INSERT=59, VALUES=60;
	public static final int
		RULE_migrations = 0, RULE_statement = 1, RULE_createTableStatement = 2, 
		RULE_createComponentTemplateStatement = 3, RULE_createIndexTemplateStatement = 4, 
		RULE_componentDefinition = 5, RULE_alterTableStatement = 6, RULE_reindexStatement = 7, 
		RULE_reindexOptions = 8, RULE_reindexOption = 9, RULE_updateStatement = 10, 
		RULE_deleteStatement = 11, RULE_insertStatement = 12, RULE_assignment = 13, 
		RULE_expression = 14, RULE_operator = 15, RULE_whereClause = 16, RULE_condition = 17, 
		RULE_comparisonOperator = 18, RULE_columnDefinition = 19, RULE_type = 20, 
		RULE_comment = 21, RULE_tableName = 22, RULE_columnName = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"migrations", "statement", "createTableStatement", "createComponentTemplateStatement", 
			"createIndexTemplateStatement", "componentDefinition", "alterTableStatement", 
			"reindexStatement", "reindexOptions", "reindexOption", "updateStatement", 
			"deleteStatement", "insertStatement", "assignment", "expression", "operator", 
			"whereClause", "condition", "comparisonOperator", "columnDefinition", 
			"type", "comment", "tableName", "columnName"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'CREATE'", "'TABLE'", "'COMPONENT'", "'INDEX'", "'TEMPLATE'", 
			"'FOR'", "'USING'", "'ALTER'", "'ADD'", "'COLUMN'", "'REINDEX'", "'INTO'", 
			"'WITH'", "'CONFLICTS'", "'ABORT'", "'PROCEED'", "'MAX_DOCS'", "'SLICES'", 
			"'AUTO'", "'SIZE'", "'SOURCE_FIELDS'", "'QUERY'", "'SCRIPT'", "'NUMBER_OF_SHARDS'", 
			"'NUMBER_OF_REPLICAS'", "'UPDATE'", "'DELETE'", "'FROM'", "'SET'", "'WHERE'", 
			"'AND'", "'OR'", "'TEXT'", "'KEYWORD'", "'INTEGER'", "'BOOLEAN'", "'DATE'", 
			"'('", "')'", "','", "';'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", 
			"'+'", "'-'", "'*'", "'/'", "'?'", null, null, null, null, null, null, 
			"'INSERT'", "'VALUES'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CREATE", "TABLE", "COMPONENT", "INDEX", "TEMPLATE", "FOR", "USING", 
			"ALTER", "ADD", "COLUMN", "REINDEX", "INTO", "WITH", "CONFLICTS", "ABORT", 
			"PROCEED", "MAX_DOCS", "SLICES", "AUTO", "SIZE", "SOURCE_FIELDS", "QUERY", 
			"SCRIPT", "NUMBER_OF_SHARDS", "NUMBER_OF_REPLICAS", "UPDATE", "DELETE", 
			"FROM", "SET", "WHERE", "AND", "OR", "TEXT", "KEYWORD", "INTEGER", "BOOLEAN", 
			"DATE", "LPAREN", "RPAREN", "COMMA", "SEMICOLON", "EQUALS", "NOT_EQUALS", 
			"LESS_THAN", "GREATER_THAN", "LESS_THAN_EQUALS", "GREATER_THAN_EQUALS", 
			"PLUS", "MINUS", "MULTIPLY", "DIVIDE", "PARAMETER", "STRING", "ID", "INTEGER_LITERAL", 
			"BOOLEAN_LITERAL", "COMMENT", "WS", "INSERT", "VALUES"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "StructuresSQL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public StructuresSQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MigrationsContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(StructuresSQLParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public MigrationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_migrations; }
	}

	public final MigrationsContext migrations() throws RecognitionException {
		MigrationsContext _localctx = new MigrationsContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_migrations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(48);
				statement();
				}
				}
				setState(51); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 720575940580608258L) != 0) );
			setState(53);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public CreateTableStatementContext createTableStatement() {
			return getRuleContext(CreateTableStatementContext.class,0);
		}
		public CreateComponentTemplateStatementContext createComponentTemplateStatement() {
			return getRuleContext(CreateComponentTemplateStatementContext.class,0);
		}
		public CreateIndexTemplateStatementContext createIndexTemplateStatement() {
			return getRuleContext(CreateIndexTemplateStatementContext.class,0);
		}
		public AlterTableStatementContext alterTableStatement() {
			return getRuleContext(AlterTableStatementContext.class,0);
		}
		public ReindexStatementContext reindexStatement() {
			return getRuleContext(ReindexStatementContext.class,0);
		}
		public UpdateStatementContext updateStatement() {
			return getRuleContext(UpdateStatementContext.class,0);
		}
		public DeleteStatementContext deleteStatement() {
			return getRuleContext(DeleteStatementContext.class,0);
		}
		public InsertStatementContext insertStatement() {
			return getRuleContext(InsertStatementContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(64);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(55);
				createTableStatement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(56);
				createComponentTemplateStatement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(57);
				createIndexTemplateStatement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(58);
				alterTableStatement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(59);
				reindexStatement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(60);
				updateStatement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(61);
				deleteStatement();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(62);
				insertStatement();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(63);
				comment();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CreateTableStatementContext extends ParserRuleContext {
		public TerminalNode CREATE() { return getToken(StructuresSQLParser.CREATE, 0); }
		public TerminalNode TABLE() { return getToken(StructuresSQLParser.TABLE, 0); }
		public TerminalNode ID() { return getToken(StructuresSQLParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(StructuresSQLParser.LPAREN, 0); }
		public List<ColumnDefinitionContext> columnDefinition() {
			return getRuleContexts(ColumnDefinitionContext.class);
		}
		public ColumnDefinitionContext columnDefinition(int i) {
			return getRuleContext(ColumnDefinitionContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(StructuresSQLParser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(StructuresSQLParser.SEMICOLON, 0); }
		public List<TerminalNode> COMMA() { return getTokens(StructuresSQLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(StructuresSQLParser.COMMA, i);
		}
		public CreateTableStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createTableStatement; }
	}

	public final CreateTableStatementContext createTableStatement() throws RecognitionException {
		CreateTableStatementContext _localctx = new CreateTableStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_createTableStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(CREATE);
			setState(67);
			match(TABLE);
			setState(68);
			match(ID);
			setState(69);
			match(LPAREN);
			setState(70);
			columnDefinition();
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(71);
				match(COMMA);
				setState(72);
				columnDefinition();
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(78);
			match(RPAREN);
			setState(79);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CreateComponentTemplateStatementContext extends ParserRuleContext {
		public TerminalNode CREATE() { return getToken(StructuresSQLParser.CREATE, 0); }
		public TerminalNode COMPONENT() { return getToken(StructuresSQLParser.COMPONENT, 0); }
		public TerminalNode TEMPLATE() { return getToken(StructuresSQLParser.TEMPLATE, 0); }
		public TerminalNode ID() { return getToken(StructuresSQLParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(StructuresSQLParser.LPAREN, 0); }
		public List<ComponentDefinitionContext> componentDefinition() {
			return getRuleContexts(ComponentDefinitionContext.class);
		}
		public ComponentDefinitionContext componentDefinition(int i) {
			return getRuleContext(ComponentDefinitionContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(StructuresSQLParser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(StructuresSQLParser.SEMICOLON, 0); }
		public List<TerminalNode> COMMA() { return getTokens(StructuresSQLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(StructuresSQLParser.COMMA, i);
		}
		public CreateComponentTemplateStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createComponentTemplateStatement; }
	}

	public final CreateComponentTemplateStatementContext createComponentTemplateStatement() throws RecognitionException {
		CreateComponentTemplateStatementContext _localctx = new CreateComponentTemplateStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_createComponentTemplateStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(CREATE);
			setState(82);
			match(COMPONENT);
			setState(83);
			match(TEMPLATE);
			setState(84);
			match(ID);
			setState(85);
			match(LPAREN);
			setState(86);
			componentDefinition();
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(87);
				match(COMMA);
				setState(88);
				componentDefinition();
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(94);
			match(RPAREN);
			setState(95);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CreateIndexTemplateStatementContext extends ParserRuleContext {
		public TerminalNode CREATE() { return getToken(StructuresSQLParser.CREATE, 0); }
		public TerminalNode INDEX() { return getToken(StructuresSQLParser.INDEX, 0); }
		public TerminalNode TEMPLATE() { return getToken(StructuresSQLParser.TEMPLATE, 0); }
		public TerminalNode ID() { return getToken(StructuresSQLParser.ID, 0); }
		public TerminalNode FOR() { return getToken(StructuresSQLParser.FOR, 0); }
		public List<TerminalNode> STRING() { return getTokens(StructuresSQLParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(StructuresSQLParser.STRING, i);
		}
		public TerminalNode USING() { return getToken(StructuresSQLParser.USING, 0); }
		public TerminalNode SEMICOLON() { return getToken(StructuresSQLParser.SEMICOLON, 0); }
		public TerminalNode WITH() { return getToken(StructuresSQLParser.WITH, 0); }
		public TerminalNode LPAREN() { return getToken(StructuresSQLParser.LPAREN, 0); }
		public List<ComponentDefinitionContext> componentDefinition() {
			return getRuleContexts(ComponentDefinitionContext.class);
		}
		public ComponentDefinitionContext componentDefinition(int i) {
			return getRuleContext(ComponentDefinitionContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(StructuresSQLParser.RPAREN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(StructuresSQLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(StructuresSQLParser.COMMA, i);
		}
		public CreateIndexTemplateStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createIndexTemplateStatement; }
	}

	public final CreateIndexTemplateStatementContext createIndexTemplateStatement() throws RecognitionException {
		CreateIndexTemplateStatementContext _localctx = new CreateIndexTemplateStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_createIndexTemplateStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(CREATE);
			setState(98);
			match(INDEX);
			setState(99);
			match(TEMPLATE);
			setState(100);
			match(ID);
			setState(101);
			match(FOR);
			setState(102);
			match(STRING);
			setState(103);
			match(USING);
			setState(104);
			match(STRING);
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WITH) {
				{
				setState(105);
				match(WITH);
				setState(106);
				match(LPAREN);
				setState(107);
				componentDefinition();
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(108);
					match(COMMA);
					setState(109);
					componentDefinition();
					}
					}
					setState(114);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(115);
				match(RPAREN);
				}
			}

			setState(119);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComponentDefinitionContext extends ParserRuleContext {
		public TerminalNode NUMBER_OF_SHARDS() { return getToken(StructuresSQLParser.NUMBER_OF_SHARDS, 0); }
		public TerminalNode EQUALS() { return getToken(StructuresSQLParser.EQUALS, 0); }
		public TerminalNode INTEGER_LITERAL() { return getToken(StructuresSQLParser.INTEGER_LITERAL, 0); }
		public TerminalNode NUMBER_OF_REPLICAS() { return getToken(StructuresSQLParser.NUMBER_OF_REPLICAS, 0); }
		public ColumnDefinitionContext columnDefinition() {
			return getRuleContext(ColumnDefinitionContext.class,0);
		}
		public ComponentDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_componentDefinition; }
	}

	public final ComponentDefinitionContext componentDefinition() throws RecognitionException {
		ComponentDefinitionContext _localctx = new ComponentDefinitionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_componentDefinition);
		try {
			setState(128);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMBER_OF_SHARDS:
				enterOuterAlt(_localctx, 1);
				{
				setState(121);
				match(NUMBER_OF_SHARDS);
				setState(122);
				match(EQUALS);
				setState(123);
				match(INTEGER_LITERAL);
				}
				break;
			case NUMBER_OF_REPLICAS:
				enterOuterAlt(_localctx, 2);
				{
				setState(124);
				match(NUMBER_OF_REPLICAS);
				setState(125);
				match(EQUALS);
				setState(126);
				match(INTEGER_LITERAL);
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 3);
				{
				setState(127);
				columnDefinition();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AlterTableStatementContext extends ParserRuleContext {
		public TerminalNode ALTER() { return getToken(StructuresSQLParser.ALTER, 0); }
		public TerminalNode TABLE() { return getToken(StructuresSQLParser.TABLE, 0); }
		public List<TerminalNode> ID() { return getTokens(StructuresSQLParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(StructuresSQLParser.ID, i);
		}
		public TerminalNode ADD() { return getToken(StructuresSQLParser.ADD, 0); }
		public TerminalNode COLUMN() { return getToken(StructuresSQLParser.COLUMN, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(StructuresSQLParser.SEMICOLON, 0); }
		public AlterTableStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alterTableStatement; }
	}

	public final AlterTableStatementContext alterTableStatement() throws RecognitionException {
		AlterTableStatementContext _localctx = new AlterTableStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_alterTableStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(ALTER);
			setState(131);
			match(TABLE);
			setState(132);
			match(ID);
			setState(133);
			match(ADD);
			setState(134);
			match(COLUMN);
			setState(135);
			match(ID);
			setState(136);
			type();
			setState(137);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReindexStatementContext extends ParserRuleContext {
		public TerminalNode REINDEX() { return getToken(StructuresSQLParser.REINDEX, 0); }
		public List<TerminalNode> ID() { return getTokens(StructuresSQLParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(StructuresSQLParser.ID, i);
		}
		public TerminalNode INTO() { return getToken(StructuresSQLParser.INTO, 0); }
		public TerminalNode SEMICOLON() { return getToken(StructuresSQLParser.SEMICOLON, 0); }
		public ReindexOptionsContext reindexOptions() {
			return getRuleContext(ReindexOptionsContext.class,0);
		}
		public ReindexStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_reindexStatement; }
	}

	public final ReindexStatementContext reindexStatement() throws RecognitionException {
		ReindexStatementContext _localctx = new ReindexStatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_reindexStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(REINDEX);
			setState(140);
			match(ID);
			setState(141);
			match(INTO);
			setState(142);
			match(ID);
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WITH) {
				{
				setState(143);
				reindexOptions();
				}
			}

			setState(146);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReindexOptionsContext extends ParserRuleContext {
		public TerminalNode WITH() { return getToken(StructuresSQLParser.WITH, 0); }
		public TerminalNode LPAREN() { return getToken(StructuresSQLParser.LPAREN, 0); }
		public List<ReindexOptionContext> reindexOption() {
			return getRuleContexts(ReindexOptionContext.class);
		}
		public ReindexOptionContext reindexOption(int i) {
			return getRuleContext(ReindexOptionContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(StructuresSQLParser.RPAREN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(StructuresSQLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(StructuresSQLParser.COMMA, i);
		}
		public ReindexOptionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_reindexOptions; }
	}

	public final ReindexOptionsContext reindexOptions() throws RecognitionException {
		ReindexOptionsContext _localctx = new ReindexOptionsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_reindexOptions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(WITH);
			setState(149);
			match(LPAREN);
			setState(150);
			reindexOption();
			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(151);
				match(COMMA);
				setState(152);
				reindexOption();
				}
				}
				setState(157);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(158);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReindexOptionContext extends ParserRuleContext {
		public TerminalNode CONFLICTS() { return getToken(StructuresSQLParser.CONFLICTS, 0); }
		public TerminalNode EQUALS() { return getToken(StructuresSQLParser.EQUALS, 0); }
		public TerminalNode ABORT() { return getToken(StructuresSQLParser.ABORT, 0); }
		public TerminalNode PROCEED() { return getToken(StructuresSQLParser.PROCEED, 0); }
		public TerminalNode MAX_DOCS() { return getToken(StructuresSQLParser.MAX_DOCS, 0); }
		public TerminalNode INTEGER_LITERAL() { return getToken(StructuresSQLParser.INTEGER_LITERAL, 0); }
		public TerminalNode SLICES() { return getToken(StructuresSQLParser.SLICES, 0); }
		public TerminalNode AUTO() { return getToken(StructuresSQLParser.AUTO, 0); }
		public TerminalNode SIZE() { return getToken(StructuresSQLParser.SIZE, 0); }
		public TerminalNode SOURCE_FIELDS() { return getToken(StructuresSQLParser.SOURCE_FIELDS, 0); }
		public TerminalNode STRING() { return getToken(StructuresSQLParser.STRING, 0); }
		public TerminalNode QUERY() { return getToken(StructuresSQLParser.QUERY, 0); }
		public TerminalNode SCRIPT() { return getToken(StructuresSQLParser.SCRIPT, 0); }
		public ReindexOptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_reindexOption; }
	}
